--- a/Proxy Group.conf
+++ b/Proxy Group.conf
@@ -109,9 +109,9 @@ RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.li
 #RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/hsbc.list, 🎯 全球直连, update-interval = 86400
 
 # >> Other# >> Other
-RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/Direct.list, 🎯 全球直连, update-interval = 86400
-DOMAIN-KEYWORD,bitget, 🇼🇸 台湾节点, update-interval = 86400
-DOMAIN-SUFFIX,imap.gmail.com, 🇺🇲 美国节点, update-interval = 86400
+#RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/Direct.list, 🎯 全球直连, update-interval = 86400
+#DOMAIN-KEYWORD,bitget, 🇼🇸 台湾节点, update-interval = 86400
+#DOMAIN-SUFFIX,imap.gmail.com, 🇺🇲 美国节点, update-interval = 86400
 
 # >> 代理规则
 #RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list, 🚀 节点选择, update-interval = 86400
