--- a/Proxy Group.conf
+++ b/Proxy Group.conf
@@ -110,8 +110,8 @@ RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/l
 # >> Other# >> Other
 RULE-SET,https://raw.githubusercontent.com/multsean/seanrocket/refs/heads/main/list/Direct.list, 🎯 全球直连, update-interval = 86400
 DOMAIN-KEYWORD,bitget, 🇯🇵 日本节点, update-interval = 86400
-#DOMAIN-SUFFIX,imap.gmail.com, 🇺🇲 美国节点, update-interval = 86400
-DOMAIN-SUFFIX,imap.gmail.com, 🎯 全球直连,no-resolve
+DOMAIN-SUFFIX,imap.gmail.com, 🇺🇲 美国节点, update-interval = 86400
+#DOMAIN-SUFFIX,imap.gmail.com, 🎯 全球直连,no-resolve
 
 # >> 代理规则
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list, 🚀 节点选择, update-interval = 86400
